--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Latest release is a pre-release, older than two weeks, with no open issues/PRs.
         run: |
-          RELEASES=$(curl --silent "https://api.github.com/repos/bruffridge/nasawds/releases")
+          RELEASES=$(curl --silent "https://api.github.com/repos/state-of-kansas/kswds/releases")
           IS_PRERELEASE=$(echo "$RELEASES" | jq -r '.[0].prerelease')
           if [ "$IS_PRERELEASE" == false ]
           then
@@ -31,7 +31,7 @@ jobs:
             exit 1
           fi
 
-          ISSUES=$(curl --silent "https://api.github.com/repos/bruffridge/nasawds/issues")
+          ISSUES=$(curl --silent "https://api.github.com/repos/state-of-kansas/kswds/issues")
           OPEN_ISSUES=$(echo "$ISSUES" | jq '. | length')
 
           if [ "$OPEN_ISSUES" -gt 0 ]
@@ -95,7 +95,7 @@ jobs:
         prerelease: false
     - run: npm install
     - run: npm run release
-    - run: echo "::set-env name=RELEASE_ASSET_PATH::$(find . -name "nasawds-*.zip")"
+    - run: echo "::set-env name=RELEASE_ASSET_PATH::$(find . -name "kswds-*.zip")"
     # https://askubuntu.com/a/682130
     - run: echo "::set-env name=RELEASE_ASSET_NAME::$(echo ${RELEASE_ASSET_PATH:2})"
 
