--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nasawds",
+  "name": "kswds",
   "description": "",
   "license": "CC0-1.0",
-  "version": "3.0.6",
-  "author": "bruffridge",
+  "version": "1.0.0",
+  "author": "pkarman",
   "repository": {
     "type": "git",
-    "url": "git://github.com/bruffridge/nasawds.git"
+    "url": "git://github.com/state-of-kansas/kswds.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "ansi-colors": "^4.1.1",
-    "autoprefixer": "^9.6.1",
+    "autoprefixer": "^9.8.5",
     "cross-spawn": "^7.0.1",
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
@@ -24,13 +24,13 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "node-notifier": "^6.0.0",
     "path": "^0.12.7",
     "postcss-csso": "^4.0.0",
-    "sass": "^1.25.0",
-    "uswds": "^2.7.1",
+    "sass": "^1.26.10",
+    "uswds": "^2.8.0",
     "uswds-gulp": "github:uswds/uswds-gulp"
   }
 }
