--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "license": "CC0-1.0",
   "version": "1.0.0",
   "author": "pkarman",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "ie 11",
+    "not dead"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/state-of-kansas/kswds.git"
