--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -2,7 +2,7 @@ name: auto-release
 
 on:
   schedule:
-    - cron: '0 1 * * *' # every day at 1 am
+    - cron: '0 1 * * 0' # every week at 1 am
 
 jobs:
   update:
