--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - name: install jq
         run: |
-          apt-get update -y
-          apt-get install -y jq
+          sudo apt-get update -y
+          sudo apt-get install -y jq git
       - name: Latest release is a pre-release, older than two weeks, with no open issues/PRs.
         run: |
           RELEASES=$(curl --silent "https://api.github.com/repos/state-of-kansas/kswds/releases")
