--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
   },
   "devDependencies": {
     "ansi-colors": "^4.1.1",
-    "autoprefixer": "^9.8.5",
-    "cross-spawn": "^7.0.1",
+    "autoprefixer": "^9.8.6",
+    "cross-spawn": "^7.0.3",
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^4.1.1",
     "gulp-sourcemaps": "^2.6.5",
-    "node-notifier": "^8.0.1",
+    "node-notifier": "^8.0.2",
     "path": "^0.12.7",
     "postcss-csso": "^4.0.0",
-    "sass": "^1.26.10",
+    "sass": "^1.35.2",
     "uswds": "^2.12.0",
     "uswds-gulp": "github:uswds/uswds-gulp",
-    "yargs-parser": ">=5.0.0-security.0"
+    "yargs-parser": "^20.2.9"
   }
 }
